# eero-prometheus-exporter

./: .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  METRICS.md  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yml  docker-publish.yml  metrics.yml  release.yml  renovate.yml  sync-wiki.yml  test-release.yml
grafana/: eero-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
src/eero_exporter/: __init__.py  api.py  cli.py  collector.py  config.py  eero_adapter.py  metrics.py  server.py
tests/: test_placeholder.py
wiki/: CLI-Reference.md  Configuration.md  Development.md  Docker.md  Home.md  Installation.md  Metrics.md  Security.md  Troubleshooting.md
